@@ -1,3 +1,9 @@
+2003-12-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/hierarchy.tcl:
+	* library/widget.tcl:
+	* library/console.tcl: handle some 8.4 behavior changes
+
 2003-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/console.tcl: update mark usage
